# cannonlab

./: .gitignore  README.md  apply-error.txt  build.gradle.kts  finalize-error.txt  settings.gradle.kts
.agent/: add-fire-input.py  apply-field-parity.py  ec-readiness.patch  finalize.py  fix-litematic-block-entities.py  upgrade.py  use-native-button-press.py
audit-fixtures/: causal-events-synthetic.csv  impulse-causal-events.csv  impulse-events-candidate.csv  impulse-events-reference.csv  overflow-129.schem.b64  probe-one-dispenser.litematic.b64  reference-physics-modern.csv
calibration/: extremecraft-field-observations.yml  fingerprint-rules.example.json  sakura-26.1.2-ruleset.yml
cannons/: 5stacker-sandcomp-v3.schem  EC160-QUICK-ONE-STACKER-WATERED-OBBY-v0.schem.b64  EC160-STACKER20-C16-P4-S2-v1.schem.b64  EC160-STACKER20-C24-P4-S2-v1.schem.b64  EC160-STACKER20-C32-P4-S2-v1.schem.b64  Shadows_1sec_384osrb_box-watered.schem.b64  basic-dispenser-cannon-v2.schem  basic-dispenser-cannon.schem  ec-flowfusion-v1_3.schem  ec-pocketcounter-24.schem  ec-regenburst-28rt-v2.schem  ec-sandburst-24-v1.schem.b64  ec-sandburst-24-v2.schem.b64  ec-satplate-legal-120.schem  ec-satplate-overcap-240.schem  ec-shadow384-v10.schem  ec-shadow384-v11.schem  ec-streambreach-120.schem  minimal-5stacker-v4.schem  probe-button-field.schem.b64  probe-four-dispenser.schem.b64  probe-one-dispenser.schem.b64  probe-water-protected-dispenser.schem.b64  (+2 more)
docs/: CANNON_CANDIDATES.md  (+25 more)
mcp-server/: README.md  advanced_server.py  advanced_tools.py  pyproject.toml  server.py  test-advanced-tools.py
(+287 files in other folders)
