[project]
name = "cannonlab-mcp"
version = "0.2.3"
description = "Local MCP tools for evidence-driven Minecraft cannon analysis"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.27,<2"
]

[project.scripts]
cannonlab-mcp = "advanced_server:main"

[tool.setuptools]
py-modules = ["server", "advanced_server", "advanced_tools"]
